<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".auth.SignInActivity"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <TextView
        android:id="@+id/signInHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:id="@+id/editTextSignInEmail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/email_address"
    android:inputType="textEmailAddress"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/signInHeader" />

<EditText
    android:id="@+id/editTextSignInPassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/password"
    android:inputType="textPassword"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextSignInEmail" />

<Button
    android:id="@+id/submitSignIn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:text="@string/submit"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextSignInPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>
